--- a/finalproject/.gitignore
+++ b/finalproject/.gitignore
@@ -1,4 +1,5 @@
 /node_modules
+/.idea
 /public/hot
 /public/storage
 /storage/*.key
@@ -10,3 +11,4 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
